--- a/nginx_passenger/templates/default/nginx.conf.erb
+++ b/nginx_passenger/templates/default/nginx.conf.erb
@@ -66,7 +66,7 @@ http {
   ##
 
   passenger_root /usr/lib/ruby/vendor_ruby/phusion_passenger/locations.ini;
-  passenger_ruby <%= node.nginx_passenger.ruby %>;
+  passenger_ruby /usr/local/bin/ruby;
   passenger_max_pool_size <%= node.nginx_passenger.max_pool_size %>;
 
   # -- Logging Format -- #
